--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Rhys Lutsky",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mysql": "^2.16.0"
   }
